2006-09-22  Tomas Junnonen <tomas.junnonen@nokia.com>

	Applied fix to "Shortcuts requiring modifiers fail to work most of the
	time". Fixes: NB#37546
	* hildon-navigator/hn-keys.c: Only return the shortcut on keypress
	* hildon-navigator/hn-wm-c: Apply the corresponding action on keyrelease

2006-09-22  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "        after setting ctrl+alt+"Russian char" for
	shortcut, in "finland" layout mode, can not assign any
	ctrl+alt+char shortcut any more". Fixes NB# 40214
	* hildon-navigator/hn-keys.c:
	  - do not grab keycode = 0 even with a mask
	  - do not return after first mask parsing failure
	  - _new should return NULL, not FALSE

2006-09-21  Moises Martinez <moises.martinzes@nokia.com>

	* install_sbapplet.sh: Added script to help sb's 
	  plugins packages install its plugin.
	* debian/maemo_af_desktop.install: Added entry
	  for install_sbapplet.sh

2006-09-21  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm.c: return DBUS_HANDLER_RESULT_HANDLED
	  after handling the "this application died" message. Fixes NB#32556

2006-09-21  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c:
	- Forced to close statusbar's panel extension when 
	  pressed full screen hardkey. Fixes: NB#40771

2006-09-20  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c:
	  - Set always sensitiveness of extension button. Fixes: NB#40831

2006-09-20  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c:
	- Implemented dbus method for communicating with
	  cpa-navigatorapplet. Required by NB #31079.

2006-09-19  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: 
	* hildon-status-bar/hildon-status-bar-main.h:
	  Send dbus signal when sb's conditional or 
	  temporal plugin fulfill its  condition.

2006-09-19  Johan Bilien <johan.bilien@nokia.com>
