@@ -1,3 +1,8 @@
+2006-09-22  Moises Martinez <moises.martinzes@nokia.com>
+
+	* hildon-navigator/hildon-navigator-window.c:
+        - Fixed initialization of hildon_dnotify_handler
+
 2006-09-22  Tomas Junnonen <tomas.junnonen@nokia.com>
 
 	Applied fix to "Shortcuts requiring modifiers fail to work most of the
